# foundations_of_qt_development

./: CMakeLists.txt  README.md
ch1/: CMakeLists.txt
ch1/ch1-1/: CMakeLists.txt  main.cpp
ch1/ch1-10/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
ch1/ch1-13/: CMakeLists.txt  main.cpp
ch1/ch1-14/: CMakeLists.txt  main.cpp
ch1/ch1-15/: CMakeLists.txt  main.cpp
ch1/ch1-16/: CMakeLists.txt  main.cpp
ch1/ch1-17/: CMakeLists.txt  main.cpp
ch1/ch1-18/: CMakeLists.txt  main.cpp
ch1/ch1-19/: CMakeLists.txt  main.cpp
ch1/ch1-22/: CMakeLists.txt  main.cpp  person.h
ch1/ch1-25/: CMakeLists.txt  main.cpp
ch1/ch1-26/: CMakeLists.txt  main.cpp
ch1/ch1-29/: CMakeLists.txt  main.cpp
ch1/ch1-4/: CMakeLists.txt  main.cpp
ch1/ch1-5/: CMakeLists.txt  main.cpp
ch1/ch1-8/: CMakeLists.txt  main.cpp  myclass.cpp  myclass.h
